--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ djangorestframework==3.13.1
 idna==3.3
 pytz==2022.1
 requests==2.27.1
+secure==0.3.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
