--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
 Django==4.0.4
+django-pwa==1.0.10
 django-rest-framework==0.1.0
 djangorestframework==3.13.1
 idna==3.3
